--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -115,4 +115,9 @@ a{
   .container{
     margin: 20px;
   }
+  .btn-wr{
+    width: 100%;
+    margin: -60px 550px 0;
+    text-align: end;
+   }
 }
