--- a/src/components/today/Today.css
+++ b/src/components/today/Today.css
@@ -106,6 +106,14 @@
   margin: 20px auto;
 }
 
+.add-btn{
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 7px;
+  margin-top: 10px;
+}
+
 
 @media screen and (max-width: 661px) {
   .flash{
